2005-10-23  Jeremy Bettis

	* configure.ac: 
	* rules.make: 
	* target.make: 
	Use install -p so that doing a make install doesn't change the
	timestamp on all the headers and cause everything to need rebuilt.
	Don't create the obj dir (symlink) on mingw.
	Add -Wl,--enable-auto-import to link commands to make the compiler be
	quiet.
	which_lib.c: Fixes to support other library types on mingw.
	Patches applied and edited to conform to GNUstep coding standard.

2005-10-20  Adam Fedor  <fedor@gnu.org>

	* config.make.in (GNUSTEP_CONFIG_FILE): Correct capitaliztion
	of substitution variable.

2005-10-19  Nicola Pero  <n.pero@mi.flashnet.it>

	* config.guess: Updated to latest version.
	* config.sub: Idem.

2005-10-18  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure.ac: Make sure that --prefix=xxx takes precedence over
	paths read from GNUstep.conf or inherited from the environment.
	* configure: Regenerated.
	
2005-10-17  Adam Fedor  <fedor@gnu.org>

	* target.make (netbsd): Remove static libs version of netbsd
	target and make (netbsdelf) work for all netbsd versions.
	* clean_os.sh: Don't clean netbsd targets. Fixes Bug #14635.

2005-10-14  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUstep.sh.in: Export GNUSTEP_USER_ROOT after setting it (Bug
	reported by Fred Kiefer <fredkiefer@gmx.de>).

2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>
	
	* GNUstep.sh.in: Read system, local, network, user paths from
	configuration files and use the configuration files settings in
	preference to the hardcoded ones.
	* GNUstep.csh.in: Same changes, where we use sed to convert on the
	fly the sh syntax of config files to csh syntax, then we eval the
	result.
	* GNUmakefile.in: Do not compile, install and clean user_home.
	* user_home.c: Removed.
	* GNUstep-reset.sh (GNUSTEP_USER_CONFIG_FILE, GNUSTEP_USER_DIR,
	GNUSTEP_USER_DEFAULTS_DIR, GNUSTEP_CONFIG_FILE): Unset.
	
2005-10-13  Nicola Pero  <n.pero@mi.flashnet.it>
	